--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
             snapId,
             request: {
               method: 'getPublicKey',
-              params: [`m/44'/637'/0'/0'/0'`, true]
+              params: {
+                derivationPath: `m/44'/637'/0'/0'/0'`,
+                confirm: true
+              }
             }
           }
         })
@@ -77,7 +80,10 @@
             snapId,
             request: {
               method: 'signMessage',
-              params: [`m/44'/637'/0'/0'/0'`, '0x4150544f530a6d6573736167653a2048656c6c6f2066726f6d206163636f756e74203078663131366664313134653465363238346238383439306234393839393534346534613166346266643564663533373434616633303863383837313134306137300a6e6f6e63653a2072616e646f6d5f737472696e67']
+              params: {
+                derivationPath: `m/44'/637'/0'/0'/0'`,
+                message: '0x4150544f530a6d6573736167653a2048656c6c6f2066726f6d206163636f756e74203078663131366664313134653465363238346238383439306234393839393534346534613166346266643564663533373434616633303863383837313134306137300a6e6f6e63653a2072616e646f6d5f737472696e67'
+              }
             }
           }
         })
