--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
   <h1>Hello, Snaps!</h1>
 
   <button class="connect">Connect</button>
-  <button class="sendHello">Send Hello</button>
-  <button class="getPrivkey">Get private key</button>
+  <button class="getPrivkey">Get public key</button>
   <button class="sign">Sign message</button>
 
   <script>
     const snapId = `local:${window.location.href}`;
 
     const connectButton = document.querySelector('button.connect')
-    const sendButton = document.querySelector('button.sendHello')
     const getPrivkeyButton = document.querySelector('button.getPrivkey')
     const signButton = document.querySelector('button.sign')
 
     connectButton.addEventListener('click', connect)
-    sendButton.addEventListener('click', send)
     getPrivkeyButton.addEventListener('click', getPrivkey)
     signButton.addEventListener('click', sign)
 
@@ -30,24 +27,6 @@
         method: 'wallet_requestSnaps',
         params: { [snapId]: {} }
       })
-    }
-
-    async function send () {
-      try {
-        const response = await ethereum.request({
-          method: 'wallet_invokeSnap',
-          params: {
-            snapId,
-            request: {
-              method: 'hello'
-            }
-          }
-        })
-        console.log(response);
-      } catch (err) {
-        console.error(err)
-        alert('Problem happened: ' + err.message || err)
-      }
     }
 
     async function getPrivkey () {
