--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <h1>Hello, Snaps!</h1>
 
   <button class="connect">Connect</button>
-  <button class="getPrivkey">Get public key</button>
+  <button class="getPubkey">Get public key</button>
   <button class="sign">Sign message</button>
 
   <script>
     const snapId = `local:${window.location.href}`;
 
     const connectButton = document.querySelector('button.connect')
-    const getPrivkeyButton = document.querySelector('button.getPrivkey')
+    const getPubkeyButton = document.querySelector('button.getPubkey')
     const signButton = document.querySelector('button.sign')
 
     connectButton.addEventListener('click', connect)
-    getPrivkeyButton.addEventListener('click', getPrivkey)
+    getPubkeyButton.addEventListener('click', getPubkey)
     signButton.addEventListener('click', sign)
 
     // here we get permissions to interact with and install the snap
@@ -29,7 +29,7 @@
       })
     }
 
-    async function getPrivkey () {
+    async function getPubkey () {
       try {
         const response = await ethereum.request({
           method: 'wallet_invokeSnap',
