Derivation path format + 1.0.2

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             request: {
               method: 'getPublicKey',
               params: {
-                derivationPath: `m/44'/637'/0'/0'/0'`,
+                derivationPath: [`0'`, `0'`, `0'`],
                 confirm: true
               }
             }
@@ -60,7 +60,7 @@
             request: {
               method: 'signMessage',
               params: {
-                derivationPath: `m/44'/637'/0'/0'/0'`,
+                derivationPath: [`0'`, `0'`, `0'`],
                 message: '0x4150544f530a6d6573736167653a2048656c6c6f2066726f6d206163636f756e74203078663131366664313134653465363238346238383439306234393839393534346534613166346266643564663533373434616633303863383837313134306137300a6e6f6e63653a2072616e646f6d5f737472696e67'
               }
             }
